# copilotkit-demo-agent

./: .gitignore  CLAUDE.md  email_working.json  package.json
agent/: main_graph.py  pyproject.toml  server.py  state.py  supervisor.py  test_gemini.py
agent/agents/: email_agent.py  research_agent.py  scheduler_agent.py
copilotkit_examples/coagents-research-canvas/agent/research_canvas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/subgraphs-demo/: package.json
examples/subgraphs-demo/agent/: main.py
examples/subgraphs-demo/src/app/: globals.css  page.tsx
frontend/: package-lock.json  package.json
frontend/app/: Main.tsx  layout.tsx  page.tsx  page_org.tsx
frontend/app/api/copilotkit/: route.ts
frontend/app/components/: AssistantCanvas.tsx  documents.tsx  email.tsx  progress.tsx  schedule.tsx  weather.tsx
frontend/app/lib/: types.ts
